<resources>
    <string name="app_name">AppCompatTest</string>
    <string name="title_section1">Widgets</string>
    <string name="title_section2">Cards</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sample">The quick brown fox jumped over the lazy dog</string>
    <string name="show_dialog">Show dialog</string>
    <string name="rb1">Option 1</string>
    <string name="rb2">Option 2</string>
    <string name="checkme">Check me</string>
    <string name="title">Choice</string>
    <string name="choice">Choose wisely</string>
    <string name="positive">Yes</string>
    <string name="elevation">Elevation</string>
    <string-array name="countries">
        <item>Norway</item>
        <item>Finland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
    </string-array>
</resources>
